// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<th
  className="cf-table__cell cf-table__cell--head"
>
  TableHeadCell
</th>
`;

exports[`should render extra class name 1`] = `
<th
  className="cf-table__cell cf-table__cell--head extra"
>
  TableHeadCell
</th>
`;
